[tool.poetry]
name = "streamlit-star-wars-crawl"
version = "0.1.0"
description = "Streamlit component to generate the Star Wars crawl text."
authors = ["Murilo Cunha <murilo@dataroots.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
