[tool.poetry]
name = "stream-wars"
version = "0.0.0-dev"
description = "Streamlit component to generate the Star Wars crawl text."
authors = ["Murilo Cunha <murilo@dataroots.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.11.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Devtools not in environment, but used in `pre-commit`
[tool.black]
include = "(stream_wars/)"

[tool.mypy]
files = ["stream_wars"]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
skip_glob = ["docs/*"]
profile = "black"
